--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             </section>
         <footer>
-            <h2 id="sum">Total Price : 4707 </h2>
+            <h2 id="sum">Total Price : 4707 TND</h2>
         </footer>
         </main>
         <script src="./js/main.js" type="text/javascript"></script>
