--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                         <h5 class="QuantityValue">1</h5>
                         <button type="button" class="incrementBtn">+</button>
                     </div>
-                    <i class="fas fa-trash"></i>
+                        <article class="icons">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-trash"></i>
+                        </article>
                 </div>
                 <div id="product2" class="product">
                     <img src="/res/1618568618269.webp" alt="Product2-img" width="150px">
@@ -42,7 +45,10 @@
                         <h5 class="QuantityValue">1</h5>
                         <button type="button" class="incrementBtn">+</button>
                     </div>
-                    <i class="fas fa-trash"></i>
+                        <article class="icons">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-trash"></i>
+                        </article>
                 </div>
                 <div id="product3" class="product">
                     <img src="/res/1616427776903.webp" alt="Product3-img" width="150px">
@@ -53,7 +59,10 @@
                         <h5 class="QuantityValue">1</h5>
                         <button type="button" class="incrementBtn">+</button>
                     </div>
+                    <article class="icons">
+                    <i class="far fa-heart"></i>
                     <i class="fas fa-trash"></i>
+                    </article>
                 </div>
             </div>
             </section>
